# fast_api

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 122a8cf751a9_.py  28a3c53d2851_.py  2a8c83dde69a_.py  31001a4ef381_.py  c201f4faddba_.py
api/: courses.py  sections.py  users.py
api/utils/: users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: user.py
