[tool.poetry]
name = "fast-api"
version = "0.0.1"
description = "learn fast api"
authors = ["Your Name <you@example.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
