[tool.poetry]
name = "fast-api"
version = "0.0.1"
description = "learn fast api"
authors = ["Your Name <you@example.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
